<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:cardElevation="10dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/parkNavn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="200dp"
            android:text="@string/vindparkNavn"
            android:textAlignment="textStart"
            android:textColor="@color/black"

            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/kommune"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toEndOf="@id/bildeVind"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/kommune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="180dp"
            android:text="@string/kommune"
            android:textAlignment="textStart"

            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/vindstyrke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toEndOf="@id/bildeVind"
            app:layout_constraintTop_toBottomOf="@id/parkNavn"

            android:paddingTop="5dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/vindstyrke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="180dp"
            android:text="@string/vindstyrke"
            android:textAlignment="textStart"

            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toEndOf="@id/bildeVind"
            app:layout_constraintTop_toBottomOf="@id/kommune"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/black"/>

        <ImageView
            android:id="@+id/bildeVind"
            android:layout_width="161dp"
            android:layout_height="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/vindstyrke"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
